Fix close button not visible

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ button {
   font-size: .8em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: gray;
 
   transition: border-color 0.25s;
 }
